# qr-pdf

./: README.md  pyproject.toml  setup.py
doc/: usage.md
qr_pdf.egg-info/: PKG-INFO
src/qr-pdf/: main.py
